--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <nav id="character_nav">
             <ul class="characters">
-                <li><img src="images/cap copy.jpeg" alt="Captain America"></li>
+                <li><img src="images/cap.jpeg" alt="Captain America"></li>
                 <li><img src="images/carol copy.jpeg" alt="Captain Marvel"></li>
                 <li><img src="images/clint copy.jpeg" alt="HawkEye"></li>
                 <li><img src="images/hulk copy.jpeg" alt="Bruce Banner"></li>
